# rust-api

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: create-release-pr.yaml  release-please.yaml  release.yaml
config/: .sops.yaml
config/local/: Makefile  config.yaml  github-secret.enc.env  github.env
http/: github-oauth.http  github.http  http-client.env.json  rust-api.http
rust/: CHANGELOG.md  Cargo.toml  Dockerfile  docker-compose.yaml
rust/src/: main.rs
src/: config.rs  endpoints.rs  error.rs  github_client.rs  github_oauth.rs  github_oauth_tests.rs  hello_world.rs  main.rs
src/github_api/: api.rs  client.rs  config.rs  mod.rs
src/tests/: mod.rs
