[package]
name = "rust-restapi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.17.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
rand = { version = "0.8.5" }
derive_more = { version = "0.99.17"}
