[package]
name = "rust-restapi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
async-trait = "0.1.64"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4"
once_cell = "1.17.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
